# python-bindings

./: LICENSE  README.md
c-library/: .clang-format  .clang-tidy  CMakeLists.txt  bindings.py  library.c  library.h  main.c
